p2/configs/second-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-ever
  namespace: demo-iot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: second-ever
  template:
    metadata:
      labels:
        app: second-ever
    spec:
      containers:
        - name: second
          image: bashofmann/rancher-demo:1.0.0
...
