p2/configs/app1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: app-iot
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: bashofmann/rancher-demo:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: app-iot
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
