p2/configs/baby-pod-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-ever
  namespace: demo-iot
spec:
  selector:
    matchLabels:
      app: first-ever
  template:
    metadata:
      labels:
        app: first-ever
    spec:
      containers:
        - name: first
          image: bashofmann/rancher-demo:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: first-ever-service
  namespace: demo-iot
spec:
  selector:
    app: first-ever
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
