p2/configs/three-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-ever
  namespace: demo-iot
spec:
  selector:
    matchLabels:
      app: three-ever
  template:
    metadata:
      labels:
        app: three-ever
    spec:
      containers:
        - name: three
          image: bashofmann/rancher-demo:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: three-ever-service
  namespace: demo-iot
spec:
  selector:
    app: three-ever
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 8080
