p2/configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-iot-ingress
  namespace: app-iot
spec:
  ingressClassName: traefik
  rules:
    - host: app1.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app1-service
                port:
                  number: 8080
    - host: app2.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app2-service
                port:
                  number: 4242
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app3-service
                port:
                  number: 7070
